* FIX index.rst * FIX pagination of last page (remove modulo) * IMPROVEMENT Create fetchone and fetchall helper * IMPROVEMENT OFFSET for pagination and COUNT for TotalItem * FIX insert_request.py decorator * FIX swagger.json /company/search/page definition
